# ComfyUI-TTS-Webui

./: .gitignore  README.md  __init__.py  api_key.py  pyproject.toml  tts_webui_openai_tts.py
.github/workflows/: publish.yml
nodes/: _base.py  _shared.py  chatterbox.py  f5_tts.py  fireredtts2.py  global_preset.py  higgs_v2.py  kitten_tts.py  kokoro.py  megatts3.py  mms.py  parler_tts.py  piper_tts.py  styletts2.py  tts_webui_openai_tts.py  vall_e_x.py
tests/: test_chatterbox.py
utils/: __init__.py  audio_io.py  files.py  naming.py  paths.py
