[project]
name = "tts-webui"
description = "This package provides ComfyUI custom nodes that call a TTS WebUI OpenAI-style HTTP endpoint (POST /v1/audio/speech) and return in-memory AUDIO usable in ComfyUI workflows. Nodes: TTS WebUI Kokoro, TTS WebUI Chatterbox, TTS WebUI StyleTTS2, TTS WebUI Kitten TTS, TTS WebUI F5-TTS, TTS WebUI Preset\nAdd API key to environment variable 'TTS_WEBUI_OPENAI_API_KEY'\nAlternatively you can write your API key to file 'tts_api_key.txt'\nYou can also use and/or override the above by entering your API key in the 'api_key' field of each node."
version = "1.0.1"
license = {file = "LICENSE"} 
classifiers = [
    # For OS-independent nodes (works on all operating systems)
    "Operating System :: OS Independent",

    # GPU Accelerator support. Pick the ones that are supported by your extension.
    "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
    "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
    # "Environment :: GPU :: Intel Arc",      # Intel Arc support
    # "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
    "Environment :: GPU :: Apple Metal",    # Apple Metal support
]


[project.urls]
Repository = "https://github.com/rsxdalv/ComfyUI-TTS-Webui"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/rsxdalv/ComfyUI-TTS-Webui/wiki"
"Bug Tracker" = "https://github.com/rsxdalv/ComfyUI-TTS-Webui/issues"

[tool.comfy]
PublisherId = "rsxdalv"
DisplayName = "TTS WebUI API nodes for ComfyUI"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

